NOJIRA: Fixed small issues identified by FindBugs tool
git-svn-id: https://source.sakaiproject.org/svn/sitestats/ufp/sitestats/trunk@72077 66ffb92e-73f9-0310-93c1-f5514f145a0a